fix tech data and Capitalize on shiftTransfer

--- a/src/components/shiftTransfer2/shiftTransfer2.css
+++ b/src/components/shiftTransfer2/shiftTransfer2.css
@@ -25,6 +25,7 @@
     font-size: 14px;
     font-weight: 500;
     color: var(--main);
+    text-transform: capitalize;
 }
 
 .shiftTransferWeekNum{
